prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/compilation_errors/sema_errors/invalid_enum.nut
// EXPECT_ERROR: "not found in constant"
enum Color { RED, GREEN, BLUE }
let x = Color.YELLOW
